Version 1.8.2
-------------

    * Fix interactive display on versions of iTerm (2.1.x) that don't support the
      ANSI CPL instruction.
    * Go version in config now only affects hashes of Go targets. This alters the
      general hash calculation logic so unfortunately will force rebuilds of all targets -
      this is unavoidable but will lead to better incrementality in future.


Version 1.8.1
-------------

    * Support for loading arch-specific config files, .plzconfig_linux_amd64 etc.
      Allows tweaking config for different machine types.


Version 1.8.0
-------------

    * Reworked internal queuing implementation which prioritises `subinclude()` targets
      more highly. `subinclude()` itself also caches compiled code.
    * New feature, `plz query reverseDeps` which finds reverse dependencies of a target.
    * `plz query graph` output has more features in it.
    * new setting in config, blacklistdirs, which excludes certain directory names from
      being walked by `plz build ...` and the like.
    * Upgraded python coverage package.
    * Upgraded gRPC implementation. Note that this is a breaking change for the RPC cache
      so that will need to be upgraded in sync with plz itself.
    * Allow passing build target expressions to --exclude.
    * Fix for some relative implicit labels passed on the command line which sometimes
      incorrectly lost a slash.
    * Terminal window titles are now updated as build progresses.


Version 1.7.3
-------------

    * Support for maven_jars fetching specified optional dependencies via 'optional' argument.


Version 1.7.2
-------------

    * Fix to Java rules which were subtly broken in previous version.


Version 1.7.1
-------------

    * Additional flag, `--include_file`, to `plz cover` which filters coverage output to
      just the given files.
    * maven_jars now has two new arguments, `combine` which combines its transitive deps