@@ -202,11 +202,13 @@ func NewBuildTarget(label BuildLabel) *BuildTarget {
 	return target
 }
 
-// Returns the temporary working directory for this target, eg.
-// //mickey/donald:goofy -> plz-out/tmp/mickey/donald/goofy
-// Note the extra subdirectory to keep rules separate from one another.
+// TmpDir returns the temporary working directory for this target, eg.
+// //mickey/donald:goofy -> plz-out/tmp/mickey/donald/goofy#.build
+// Note the extra subdirectory to keep rules separate from one another, and the .build suffix
+// to attempt to keep rules from duplicating the names of sub-packages; obviously that is not
+// 100% reliable but we don't have a better solution right now.
 func (target *BuildTarget) TmpDir() string {
-	return path.Join(TmpDir, target.Label.PackageName, target.Label.Name)
+	return path.Join(TmpDir, target.Label.PackageName, target.Label.Name+"#.build")
 }
 
 // Returns the output directory for this target, eg.
@@ -220,11 +222,11 @@ func (target *BuildTarget) OutDir() string {
 }
 
 // Returns the test directory for this target, eg.
-// //mickey/donald:goofy -> plz-out/tmp/mickey/donald/goofy.test
+// //mickey/donald:goofy -> plz-out/tmp/mickey/donald/goofy#.test
 // This is different to TmpDir so we run tests in a clean environment
 // and to facilitate containerising tests.
 func (target *BuildTarget) TestDir() string {
-	return target.TmpDir() + ".test"
+	return path.Join(TmpDir, target.Label.PackageName, target.Label.Name+"#.test")
 }
 
 // Returns all the source paths for this target
