@@ -106,3 +106,9 @@ func TestDoubleSlashes(t *testing.T) {
 	assertNotLabel(t, "//src//core:target1", "double slashes not allowed")
 	assertNotLabel(t, "//src/core/something//something", "double slashes not allowed")
 }
+
+// Test that labels can't match reserved suffixes used for temp dirs.
+func TestReservedTempDirs(t *testing.T) {
+	assertNotLabel(t, "//src/core:core#.build", "#.build is a reserved suffix")
+	assertNotLabel(t, "//src/core:core#.test", "#.test is a reserved suffix")
+}
